--- a/index.html
+++ b/index.html
@@ -2,209 +2,103 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <title>Timeless One-Page HTML Template</title>
-<!-- 
-
-Timeless Template 
-
-http://www.templatemo.com/tm-517-timeless
-
--->
-    <!-- load CSS -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
-    <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- https://getbootstrap.com/ -->
-    <link rel="stylesheet" href="css/templatemo-style.css">
-    <!-- Templatemo style -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Componente---Flexbox--Produktbeschreibung.css">
+    <link rel="stylesheet" href="assets/css/divider-text-middle.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/Newsletter-Subscription-Form.css">
+    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
+    <link rel="stylesheet" href="assets/css/Simple-Slider.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <header class="text-center tm-site-header">
-                    <div class="tm-site-logo"></div>
-                    <h1 class="pl-4 tm-site-title">Timeless</h1>
-                </header>
+    <nav class="navbar navbar-light navbar-expand-md" style="background: #000000;height: 65px;">
+        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--bs-light);font-size: 30px;">TheIndieGamer</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse text-dark justify-content-end" id="navcol-1" style="border-radius: 0;transform: translate(0px) scale(1);width: 1024.48px;">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#" style="color: var(--bs-light);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" style="color: var(--bs-light);">Tech</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" style="color: var(--bs-light);">Games</a></li>
+                </ul>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="tm-video-container">
-                    <video id="tm-welcome-video" class="tm-welcome-video" autoplay="" loop="" muted="">
-                        <source src="videos/video.mp4" type="video/mp4"> Your browser does not support the video tag.
-                        </video>
-                        <div id="tm-video-loader"></div>
-                        <div id="tm-video-text-overlay" class="tm-video-text-overlay d-none">
-                            <h1>
-                                <div id="rotate" class="tm-video-text">
-                                    <div>This is timeless</div>
-                                    <div>We are invincible</div>
-                                    <div>Quite unbeatable</div>
-                                    <div>and indestructible</div>
-                                </div>
-                            </h1>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container tm-container-2">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="tm-welcome-text">Welcome to Timeless</h2>
-                </div>
-            </div>
-            <div class="row tm-section-mb">
-                <div class="col-lg-12">
-                    <div class=" tm-timeline-item">
-                        <div class="tm-timeline-item-inner">
-                            <img src="img/img-01.jpg" alt="Image" class="rounded-circle tm-img-timeline">
-                            <div class="tm-timeline-connector">
-                                <p class="mb-0">&nbsp;</p>
-                            </div>
-                            <div class="tm-timeline-description-wrap">
-                                <div class="tm-bg-dark tm-timeline-description">
-                                    <h3 class="tm-text-green tm-font-400">Nulla venenatis purus nec quam</h3>
-                                    <p>You may tell your co-workers about TemplateMo free stuffs to download and use for any website project. Thank you for supporting us.</p>
-                                    <p class="tm-text-green float-right mb-0">New Event . 12 July 2018</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="tm-timeline-connector-vertical"></div>
-                    </div>
-
-                    <div class="tm-timeline-item">
-                        <div class="tm-timeline-item-inner">
-                            <img src="img/img-02.jpg" alt="Image" class="rounded-circle tm-img-timeline">
-                            <div class="tm-timeline-connector">
-                                <p class="mb-0">&nbsp;</p>
-                            </div>
-                            <div class="tm-timeline-description-wrap">
-                                <div class="tm-bg-dark-light tm-timeline-description">
-                                    <h3 class="tm-text-cyan tm-font-400">Vestibulum ante ipsum primis</h3>
-                                    <p>In imperdiet nisl quis sapien pellentesque, non rhoncus elit sollicitudin. Donec pharetra egestas magna at eleifend. Sed non magna vitae enim tempus faucibus.</p>
-                                    <p class="tm-text-cyan float-right mb-0">Another Story . 9 July 2018</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tm-timeline-connector-vertical"></div>
-                    </div>
-
-                    <div class="tm-timeline-item">
-                        <div class="tm-timeline-item-inner">
-                            <img src="img/img-03.jpg" alt="Image" class="rounded-circle tm-img-timeline">
-                            <div class="tm-timeline-connector">
-                                <p class="mb-0">&nbsp;</p>
-                            </div>
-                            <div class="tm-timeline-description-wrap">
-                                <div class="tm-bg-dark tm-timeline-description">
-                                    <h3 class="tm-text-yellow tm-font-400">Pellentesque accumsan convallis</h3>
-                                    <p>Suspendisse felis massa, maximus sed mauris at, elementum fermentum nisl. Aliquam quis elit vel ipsum ornare sollicitudin. Nulla et dolor eget nisi varius convallis.</p>
-                                    <p class="tm-text-yellow float-right mb-0">Latest News . 30 June 2018</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tm-timeline-connector-vertical"></div>
-                    </div>
-
-                    <div class="tm-timeline-item">
-                        <div class="tm-timeline-item-inner">
-                            <img src="img/img-04.jpg" alt="Image" class="rounded-circle tm-img-timeline">
-                            <div class="tm-timeline-connector">
-                                <p class="mb-0">&nbsp;</p>
-                            </div>
-                            <div class="tm-timeline-description-wrap">
-                                <div class="tm-bg-dark-light tm-timeline-description">
-                                    <h3 class="tm-text-orange tm-font-400">Lorem ipsum dolor sit amet</h3>
-                                    <p>Phasellus at quam facilisis sem congue lacinia. Fusce risus velit, bibendum in magna eu, sollicitudin pellentesque dolor. Nulla facilisi. Fusce libero mauris, maximus et liqula at.</p>
-                                    <p class="tm-text-orange float-right mb-0">New Project . 22 June 2018</p>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-            <!--  row -->
-            <hr>
-            <div class="row tm-section-mb tm-section-mt">
-                <div class="col-lg-4 col-md-4 col-sm-12 pr-lg-5 mb-md-0 mb-4">
-                    <h3 class="mt-2 mb-3 tm-text-gray">Nunc dictum consequat</h3>
-                    <p>Integer imperdiet aliquet lobortis. In in metus risus. Pellentesque pulvinar venenatis dui id rutrum. In
-                    pharetra neque et eleifend venenatis.</p>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 pr-lg-5 mb-md-0 mb-4">
-                    <h3 class="mt-2 mb-3 tm-text-gray">Morbi ultrices tellus</h3>
-                    <p>Integer imperdiet aliquet lobortis. In in metus risus. Pellentesque pulvinar venenatis dui id rutrum. In
-                    pharetra neque et eleifend venenatis.</p>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                    <h3 class="mt-2 mb-3 tm-text-gray">Suspendisse dolor tortor</h3>
-                    <p>Integer imperdiet aliquet lobortis. In in metus risus. Pellentesque pulvinar venenatis dui id rutrum. In
-                    pharetra neque et eleifend venenatis.</p>
-                </div>
-            </div>
-            <hr>
-            <div class="row tm-section-mt">
-                <div class="col-lg-6">
-                    <h3 class="mb-4 tm-text-gray">Our Location</h3>
-                    <!-- GOOGLE MAP -->
-                    <div id="google-map" class="text-center mb-5">
-                    <!-- How to change your own map point
-                           1. Go to Google Maps
-                           2. Click on your location point
-                           3. Click "Share" and choose "Embed map" tab
-                           4. Copy only URL and paste it within the src="" field below
-                       -->
-                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.3030413476204!2d100.5641230193719!3d13.757206847615207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf51ce6427b7918fc!2sG+Tower!5e0!3m2!1sen!2sth!4v1510722015945"
-                       class="google-map-iframe" width="500" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-                   </div>
-               </div>
-               <div class="col-lg-6 mb-5">
-                <h3 class="mb-4 tm-text-gray">Contact Us</h3>
-                <form action="#contact" method="post" class="tm-contact-form">
-                    <div class="row">
-                        <div class="form-group col-xl-6">
-                            <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name..." required/>
-                        </div>
-                        <div class="form-group col-xl-6">
-                            <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="Email..." required/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <textarea id="contact_message" name="contact_message" class="form-control" rows="6" placeholder="Your Message..." required></textarea>
-                    </div>
-                    <button type="submit" class="btn  tm-btn-send">Send It</button>
-                </form>
-            </div>
-        </div>
-        <hr>
-        <!-- Footer -->
-        <footer class="row mt-5 mb-5">
-            <div class="col-lg-12">
-                <p class="text-center tm-text-gray tm-copyright-text mb-0">Copyright &copy;
-                    <span class="tm-current-year">2018</span> Your Company Name 
-                    
-                    | Design: <a href="http://templatemo.com/tm-517-timeless" class="tm-text-white">Timeless</a>
-                </p>
-            </div>
-        </footer>
+    </nav>
+    <div style="text-align: center;color: rgb(255, 255, 255);">
+        <h2 class="divider-style" style="font-size: 20px;"><span style="color: rgb(0,0,0);text-align: center;font-family: 'Open Sans', sans-serif;font-size: 27px;">Lastest Blogs</span></h2>
     </div>
-    <!-- .container -->
-
-    <script src="js/jquery.min.js"></script>
-    <!-- <script src="js/jquery-3.2.1.slim.min.js"></script> -->
-    <script src="js/templatemo-script.js"></script>
-
+    <section class="projects-horizontal">
+        <div class="container">
+            <div class="row projects">
+                <div class="col-sm-6 item">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/desk.jpg"></a></div>
+                        <div class="col">
+                            <h3 class="name">Project Name</h3>
+                            <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 item">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/building.jpg"></a></div>
+                        <div class="col">
+                            <h3 class="name">Project Name</h3>
+                            <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="newsletter-subscribe">
+        <div class="container">
+            <div class="intro">
+                <h2 class="text-center" style="color: rgb(0,0,0);">Subscribe for our Newsletter</h2>
+                <p class="text-center">To get an alert about our new updates and blogs!</p>
+            </div>
+            <form class="d-flex justify-content-center flex-wrap" method="post">
+                <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
+                <div class="mb-3"><button class="btn btn-primary" type="submit">Subscribe </button></div>
+            </form>
+        </div>
+    </section>
+    <footer class="footer-dark bottom-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 item">
+                    <h3>Personal Blogs</h3>
+                    <ul>
+                        <li><a href="#">Technology</a></li>
+                        <li><a href="#">Development</a></li>
+                        <li><a href="#">Gaming Hub</a></li>
+                        <li><a href="#">Some Other Updates</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-3 item">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 item text">
+                    <h3>About</h3>
+                    <p style="color: rgb(255,255,255);">This bloging website is solely handled by ("theindiegamer") for writing and publishing blogs regarding new tech and game updates worldwide.</p>
+                </div>
+                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+            </div>
+            <p class="copyright" style="color: rgb(255,255,255);">TheIndieGamer © 2021</p>
+        </div>
+    </footer>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
+    <script src="assets/js/Simple-Slider.js"></script>
 </body>
+
 </html>
