Adding first article page.
Adding first article live.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="row projects">
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/desk.jpg"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="article.html"><img class="img-fluid" src="assets/img/windows11.png"></a></div>
                         <div class="col">
-                            <h3 class="name">Project Name</h3>
-                            <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
+                            <h3 class="name">Windows 11 Reviews</h3>
+                            <p class="description">Now can natively run Android apps on all new windows. With help from Intel and Amazon, your favorite phone apps will have a new home. </p>
                         </div>
                     </div>
                 </div>
