Adding index links
Added index links to first article.html

--- a/article.html
+++ b/article.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background: #000000;height: 65px;">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--bs-light);font-size: 30px;">TheIndieGamer</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color: var(--bs-light);font-size: 30px;">TheIndieGamer</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse text-dark justify-content-end" id="navcol-1" style="border-radius: 0;transform: translate(0px) scale(1);width: 1024.48px;">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link active" href="#" style="color: var(--bs-light);">Home</a></li>
