--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background: #000000;height: 65px;">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--bs-light);font-size: 30px;">TheIndieGamer</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color: var(--bs-light);font-size: 30px;">TheIndieGamer</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse text-dark justify-content-end" id="navcol-1" style="border-radius: 0;transform: translate(0px) scale(1);width: 1024.48px;">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link active" href="#" style="color: var(--bs-light);">Home</a></li>
@@ -47,11 +47,11 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/building.jpg"></a></div>
+                       <!--  <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/building.jpg"></a></div>
                         <div class="col">
                             <h3 class="name">Project Name</h3>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
