--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
                 <div class="mb-3"><button class="btn btn-primary" type="submit">Subscribe </button></div>
             </form>
+            <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="shivansh-pandey-9b3137129" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/shivansh-pandey-9b3137129?trk=profile-badge">Shivansh Pandey</a></div>
+
         </div>
     </section>
     <footer class="footer-dark bottom-0">
@@ -101,4 +103,5 @@
     <script src="assets/js/Simple-Slider.js"></script>
 </body>
 
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </html>
